Re-attempting atmo shader

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -38,9 +38,11 @@ EVE_ATMOSPHERE
 				atmosphereMaterial
 				{
 					_Color = 0.41796875, 0.8046875, 1, 1
-					_DensityRatioY = .99
 					_DensityRatioX = 1.6
-					_Visibility = .00025
+					_DensityRatioY = 42
+					_DensityRatioZ = 0.00083333333
+					_DensityRatioPow = 5
+					_Visibility = 1.05
 				}
 			}
 
