--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -38,11 +38,11 @@ EVE_ATMOSPHERE
 				atmosphereMaterial
 				{
 					_Color = 0.41796875, 0.8046875, 1, 1
-					_DensityRatioX = 1.6
-					_DensityRatioY = 42
-					_DensityRatioZ = 0.00083333333
-					_DensityRatioPow = 5
-					_Visibility = 1.05
+					_DensityRatioX = .8
+					_DensityRatioY = 47
+					_Scale = 0.00083333333
+					_DensityRatioPow = .98
+					_Visibility = 1
 				}
 			}
 
