--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -38,11 +38,19 @@ EVE_ATMOSPHERE
 				atmosphereMaterial
 				{
 					_Color = 0.41796875, 0.8046875, 1, 1
-					_DensityRatioX = 5
-					_DensityRatioY = 48.5
-					_Scale = 0.00083333333
-					_DensityRatioPow = 1.5
-					_Visibility = 1.5
+					_DensityFactorA = 1
+					_DensityFactorB = 1
+					_DensityFactorC = 1
+					_DensityFactorD = 50
+					_DensityFactorE = 80.5
+                                        _Visibility = 10
+                                        _DensityVisibilityBase = 2.71
+					_DensityVisibilityPow = .0105
+                                        _DensityVisibilityOffset = 1
+					_DensityCutoffBase = 2.71
+					_DensityCutoffPow = .0155
+                                        _DensityCutoffOffset = -100
+                                        _DensityCutoffScale = 100
 				}
 			}
 
