fixed loading issue.

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -38,6 +38,7 @@ EVE_ATMOSPHERE
 				atmosphereMaterial
 				{
 					_Color = 0.41796875, 0.8046875, 1, 1
+					_SunsetColor = 1, 0.12156, 0.023529, 0.560784
 					_DensityFactorA = 1
 					_DensityFactorB = 1
 					_DensityFactorC = 1
