--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -19,9 +19,9 @@ EVE_ATMOSPHERE
 			}
 			layerVolume
 			{
-				texture = BoulderCo/Atmosphere/Textures/kerbin1
 				particleMaterial
 				{
+					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
 					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
