--- a/Clouds/Atmosphere.csproj
+++ b/Clouds/Atmosphere.csproj
@@ -114,6 +114,10 @@
       <Project>{bdc8381a-c16b-4fd1-afb4-d30ea906e367}</Project>
       <Name>PQSManager</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ShaderLoader\ShaderLoader.csproj">
+      <Project>{f210fbc0-0cbb-4cd2-a3f0-e32096cf256d}</Project>
+      <Name>ShaderLoader</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utils\Utils.csproj">
       <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
       <Name>Utils</Name>
