--- a/PQSManager/PQSManager.csproj
+++ b/PQSManager/PQSManager.csproj
@@ -94,6 +94,10 @@
       <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
       <Name>EVEManager</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ShaderLoader\ShaderLoader.csproj">
+      <Project>{f210fbc0-0cbb-4cd2-a3f0-e32096cf256d}</Project>
+      <Name>ShaderLoader</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Utils\Utils.csproj">
       <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
       <Name>Utils</Name>
