--- a/Terrain/Terrain.csproj
+++ b/Terrain/Terrain.csproj
@@ -97,6 +97,10 @@
       <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
       <Name>EVEManager</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ShaderLoader\ShaderLoader.csproj">
+      <Project>{f210fbc0-0cbb-4cd2-a3f0-e32096cf256d}</Project>
+      <Name>ShaderLoader</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ShaderReplacer\ShaderReplacer.csproj">
       <Project>{6ed213a8-d3db-4de8-ba0b-e81b50abe658}</Project>
       <Name>ShaderReplacer</Name>
