--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -6,22 +6,26 @@ EVE_ATMOSPHERE
 		{
 			altitude = 4000
 			speed = 30
+			detailSpeed = 6
 			scaledOverlay = Geometry
+
+                        settings
+			{
+				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
+				_DetailTex = BoulderCo/Atmosphere/Textures/detail1
+				_DetailScale = 60
+			}
+			
 			layer2D
 			{
-				detailSpeed = 6
 				macroCloudMaterial
 				{
-					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
-					_DetailTex = BoulderCo/Atmosphere/Textures/detail1
-					_DetailScale = 60
 				}
 			}
 			layerVolume
 			{
 				particleMaterial
 				{
-					_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
 					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
