--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -8,27 +8,46 @@ EVE_ATMOSPHERE
 			speed = 30
 			detailSpeed = 6
 			scaledOverlay = Geometry
-
-                        settings
+			offset = 0,0,0
+			settings
 			{
 				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 				_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 				_DetailScale = 60
+				_Color = 1,1,1,1
+				_DistFade = 1
+				_DistFadeVert = 4E-05
 			}
-			
 			layer2D
 			{
+				shadow = True
+				shadowOffset = 0,0,0
 				macroCloudMaterial
 				{
+					_FalloffPow = 2
+					_FalloffScale = 3
+					_DetailDist = 2E-06
+					_MinLight = 0.5
+					_RimDist = 0.0001
+					_RimDistSub = 1.01
+					_InvFade = 0.008
 				}
 			}
 			layerVolume
 			{
+				size = 4000,2,0
+				maxTranslation = 0,100,0
+				area = 24000,4,0
+				rotationSpeed = 0.002
 				particleMaterial
 				{
 					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
 					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+					_Color = 1,1,1,1
+					_LightScatter = 0.55
+					_MinLight = 0.5
+					_InvFade = 0.008
 				}
 			}
 		}
@@ -48,20 +67,16 @@ EVE_ATMOSPHERE
 					_DensityFactorC = 1
 					_DensityFactorD = 42
 					_DensityFactorE = -10
-                                        _Visibility = 10
-                                        _DensityVisibilityBase = 2.71
+					_Visibility = 10
+					_DensityVisibilityBase = 2.71
 					_DensityVisibilityPow = .0105
-                                        _DensityVisibilityOffset = 1
+					_DensityVisibilityOffset = 1
 					_DensityCutoffBase = 2.71
 					_DensityCutoffPow = .0155
-                                        _DensityCutoffOffset = -100
-                                        _DensityCutoffScale = 100
+					_DensityCutoffOffset = -100
+					_DensityCutoffScale = 100
 				}
 			}
-
 		}
-
 	}
-	
-	
 }
