--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -9,28 +9,15 @@ EVE_TERRAIN
 			_DetailScale = 4000
 			_DetailVertScale = 200
 			_DetailDist = .00001
-			_OceanColor = 0,0.10823,.5,1
+			_OceanColor = 0,0,0,1
 			_OceanDepthFactor = .0015
 			_Color = 1,1,1,1
 			_MinLight = 0.5
 			_Albedo = 0.02
 		}
-		planetMaterial
-		{
-			_Color = 1,1,1,1
-			_SpecColor = 1,1,1,1
-			_Shininess = 10
-			_DetailTex = 
-			_DetailVertTex = 
-			_DetailScale = 4000
-			_DetailVertScale = 200
-			_DetailDist = 0.00875
-			_MinLight = 0.5
-			_Albedo = 0.02
-		}
 		oceanMaterial
 		{
-			_Color = 0,0.38823,1,1
+			_Color = 0,0.38823,1,.5
 			_UnderColor = 0,.1992,.5976,1
 			_DetailTex = BoulderCo/Terrain/Textures/ocean
 			_DetailScale = 1000
