Slight Ocean Improvements

--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -17,7 +17,7 @@ EVE_TERRAIN
 		}
 		oceanMaterial
 		{
-			_Color = 0,0.38823,1,.5
+			_SurfaceColor = 0,0.38823,1,.5
 			_UnderColor = 0,.1992,.5976,1
 			_DetailTex = BoulderCo/Terrain/Textures/ocean
 			_DetailScale = 1000
