updated colors to use RGBA 0-255 values.

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -14,9 +14,10 @@ EVE_ATMOSPHERE
 				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 				_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 				_DetailScale = 60
-				_Color = 1,1,1,1
 				_DistFade = 1
 				_DistFadeVert = 4E-05
+				_Color = 255,255,255,255
+				_DetailDist = 2E-06
 			}
 			layer2D
 			{
@@ -44,10 +45,10 @@ EVE_ATMOSPHERE
 					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
 					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
-					_Color = 1,1,1,1
 					_LightScatter = 0.55
 					_MinLight = 0.5
 					_InvFade = 0.008
+					_Color = 255,255,255,255
 				}
 			}
 		}
@@ -60,8 +61,8 @@ EVE_ATMOSPHERE
 			{
 				atmosphereMaterial
 				{
-					_Color = 0.41796875, 0.8046875, 1, 1
-					_SunsetColor = 1, 0.12156, 0.023529, 0.560784
+					_Color = 106, 205, 255, 255
+					_SunsetColor = 255, 30, 6, 127
 					_DensityFactorA = 1
 					_DensityFactorB = 1
 					_DensityFactorC = 1
