--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -9,22 +9,26 @@ EVE_TERRAIN
 			_DetailScale = 4000
 			_DetailVertScale = 200
 			_DetailDist = .00001
-			_OceanColor = 0,0,0,1
+			_OceanColor = 0,0,0,255
 			_OceanDepthFactor = .0015
-			_Color = 1,1,1,1
+			_Color = 255,255,255,255
 			_MinLight = 0.5
 			_Albedo = 0.02
+			_MainTex = 
+			_midTex = 
+			_steepTex = 
+			_BumpMap = 
+			_SpecColor = 127,127,127,255
+			_Shininess = 0.4
 		}
 		oceanMaterial
 		{
-			_SurfaceColor = 0,0.38823,1,.5
-			_UnderColor = 0,.1992,.5976,1
+			_SurfaceColor = 31,55,87,127
+			_UnderColor = 0,50,152,255
 			_DetailTex = BoulderCo/Terrain/Textures/ocean
 			_DetailScale = 1000
 			_DetailDist = .000001
 			_Clarity = .002
-			_SpecColor = 1,1,1,1
-			_Shininess = 10
 			_MinLight = 0.5
 			_LightPower = 1.75
 			_Reflectivity = 0.08
@@ -34,7 +38,7 @@ EVE_TERRAIN
 	{
 		terrainMaterial
 		{
-			_Color = 1,1,1,1
+			_Color = 255,255,255,255
 			_DetailTex = 
 			_DetailVertTex = 
 			_DetailScale = 4000
@@ -42,13 +46,10 @@ EVE_TERRAIN
 			_DetailDist = 0.00875
 			_MinLight = 0.5
 			_Albedo = 0.02
-			_OceanColor = 0,0,1,1
 			_OceanDepthFactor = 0.002
 		}
 		planetMaterial
 		{
-			_Color = 1,1,1,1
-			_SpecColor = 1,1,1,1
 			_Shininess = 1000
 			_DetailTex = 
 			_DetailVertTex = 
