--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -18,7 +18,7 @@ EVE_TERRAIN
 			_midTex = 
 			_steepTex = 
 			_BumpMap = 
-			_SpecColor = 127,127,127,255
+			_SpecularColor = 127,127,127,255
 			_Shininess = 0.4
 		}
 		oceanMaterial
