--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -19,7 +19,7 @@ EVE_TERRAIN
 			_steepTex = 
 			_BumpMap = 
 			_SpecularColor = 127,127,127,255
-			_Shininess = 0.4
+			_SpecularPower = 51.2
 		}
 		oceanMaterial
 		{
