Preparing for Beta Release
Focussing on getting features in classic EVE ported to current EVE.
City lights are no longer baked into terrain shader. They are a
secondary material now. This mechanism will be used for planetary body
and cloud shaddows in scaled space. Macro space will use projectors so
that craft and other bodies will be affected.

Removed Shader replacer. No longer needed in future KSP releases.

Updated to new Visual Studio

--- a/CityLights/CityLights.csproj
+++ b/CityLights/CityLights.csproj
@@ -90,9 +90,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\EveManager\EVEManager.csproj">
       <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
       <Name>EVEManager</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PQSManager\PQSManager.csproj">
+      <Project>{bdc8381a-c16b-4fd1-afb4-d30ea906e367}</Project>
+      <Name>PQSManager</Name>
     </ProjectReference>
     <ProjectReference Include="..\ShaderLoader\ShaderLoader.csproj">
       <Project>{f210fbc0-0cbb-4cd2-a3f0-e32096cf256d}</Project>
@@ -106,9 +113,6 @@
       <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
       <Name>Utils</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
