--- a/GameData/BoulderCo/Terrain/terrain.cfg
+++ b/GameData/BoulderCo/Terrain/terrain.cfg
@@ -4,8 +4,6 @@ EVE_TERRAIN
 	{
 		terrainMaterial
 		{
-			_DetailTex = BoulderCo/Terrain/Textures/grass
-			_DetailVertTex = BoulderCo/Terrain/Textures/rock
 			_DetailScale = 4000
 			_DetailVertScale = 200
 			_DetailDist = .00001
@@ -46,18 +44,8 @@ EVE_TERRAIN
 			_DetailDist = 0.00875
 			_MinLight = 0.5
 			_Albedo = 0.02
-			_OceanDepthFactor = 0.002
-		}
-		planetMaterial
-		{
-			_Shininess = 1000
-			_DetailTex = 
-			_DetailVertTex = 
-			_DetailScale = 4000
-			_DetailVertScale = 200
-			_DetailDist = 0.00875
-			_MinLight = 0.5
-			_Albedo = 0.5
+			_SpecularColor = 127,127,127,255
+			_SpecularPower = 51.2
 		}
 	}
 }
