--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -85,6 +85,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MaterialPQS.cs" />
     <Compile Include="SimpleCube.cs" />
     <Compile Include="GUIHelper.cs" />
     <Compile Include="HalfSphere.cs" />
