Separated Clouds from atmosphere, isolated WIP Items to GameDataWIP

--- a/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -1,4 +1,4 @@
-EVE_ATMOSPHERE
+EVE_CLOUDS
 {
 	Kerbin
 	{
@@ -49,33 +49,6 @@ EVE_ATMOSPHERE
 					_MinLight = 0.5
 					_InvFade = 0.008
 					_Color = 255,255,255,255
-				}
-			}
-		}
-		Atmosphere
-		{
-			altitude = 42000
-			speed = 0
-			scaledOverlay = Geometry
-			atmosphere
-			{
-				atmosphereMaterial
-				{
-					_Color = 106, 205, 255, 255
-					_SunsetColor = 255, 30, 6, 127
-					_DensityFactorA = 1
-					_DensityFactorB = 1
-					_DensityFactorC = 1
-					_DensityFactorD = 42
-					_DensityFactorE = -10
-					_Visibility = 10
-					_DensityVisibilityBase = 2.71
-					_DensityVisibilityPow = .0105
-					_DensityVisibilityOffset = 1
-					_DensityCutoffBase = 2.71
-					_DensityCutoffPow = .0155
-					_DensityCutoffOffset = -100
-					_DensityCutoffScale = 100
 				}
 			}
 		}
