--- a/Clouds/Atmosphere.csproj
+++ b/Clouds/Atmosphere.csproj
@@ -85,7 +85,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CloudsPQS.cs" />
+    <Compile Include="CloudsManager.cs" />
     <Compile Include="AtmosphereManager.cs" />
+    <Compile Include="CloudsObject.cs" />
     <Compile Include="AtmospherePQS.cs" />
     <Compile Include="AtmosphereObject.cs" />
     <Compile Include="AtmosphereVolume.cs" />
