Eve Tweak and bug fix.

--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -226,7 +226,7 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
+				shadow = False
 				shadowOffset = 0,0,0
 				macroCloudMaterial
 				{
@@ -324,7 +324,7 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
+				shadow = False
 				shadowOffset = 0,0,0
 				macroCloudMaterial
 				{
