--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -21,8 +21,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -73,8 +74,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -125,8 +127,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -177,8 +180,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -226,8 +230,6 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = False
-				shadowOffset = 0,0,0
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -275,8 +277,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -324,8 +327,6 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = False
-				shadowOffset = 0,0,0
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -373,8 +374,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -425,8 +427,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -474,8 +477,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
@@ -523,8 +527,9 @@ EVE_CLOUDS
 			}
 			layer2D
 			{
-				shadow = True
-				shadowOffset = 0,0,0
+				shadowMaterial
+				{
+				}
 				macroCloudMaterial
 				{
 					_FalloffPow = 2
