Updated the config loading to properly handle obscure objects

--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -85,6 +85,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassExtensions.cs" />
+    <Compile Include="ConfigHelper.cs" />
     <Compile Include="MaterialPQS.cs" />
     <Compile Include="SimpleCube.cs" />
     <Compile Include="GUIHelper.cs" />
