--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -5,18 +5,16 @@ EVE_CLOUDS
 		Kerbin-clouds1
 		{
 			altitude = 4000
-			speed = 0,30,0
 			detailSpeed = 0,6,0
-			offset = 0,0,0
 			settings
 			{
 				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 				_DetailTex = BoulderCo/Atmosphere/Textures/detail1
-				_DetailScale = 100
-				_DistFade = 1
-				_DistFadeVert = 4E-05
 				_Color = 255,255,255,255
-				_DetailDist = 2E-06
+				_MainTex
+				{
+					value = BoulderCo/Atmosphere/Textures/kerbin1
+				}
 			}
 			layer2D
 			{
@@ -25,20 +23,13 @@ EVE_CLOUDS
 				}
 				macroCloudMaterial
 				{
-					_FalloffPow = 2
-					_FalloffScale = 3
 					_DetailDist = 2E-06
-					_MinLight = 0.5
-					_RimDist = 0.0001
-					_RimDistSub = 1.01
-					_InvFade = 0.008
 				}
 			}
 			layerVolume
 			{
 				size = 4000,2
 				maxTranslation = 0,100,0
-				area = 24000,4
 				particleMaterial
 				{
 					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
@@ -46,7 +37,6 @@ EVE_CLOUDS
 					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 					_LightScatter = 0.55
 					_MinLight = 0.5
-					_InvFade = 0.008
 				}
 			}
 		}
