GUI Spacing... Still have to figure out Unicode Arrows

--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -11,10 +11,7 @@ EVE_CLOUDS
 				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 				_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 				_Color = 255,255,255,255
-				_MainTex
-				{
-					value = BoulderCo/Atmosphere/Textures/kerbin1
-				}
+				_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 			}
 			layer2D
 			{
