--- a/_BuildManager/_BuildManager.csproj
+++ b/_BuildManager/_BuildManager.csproj
@@ -117,10 +117,17 @@
     <PostBuildEvent>
 xcopy "$(SolutionDir)ContentConfigs\GameData" "C:\Users\rbray\Documents\ksp\ksp-$(PlatformName)-1-0-5\GameData" /e /y /i /r
 xcopy "$(SolutionDir)ContentEVE\GameData" "C:\Users\rbray\Documents\ksp\ksp-$(PlatformName)-1-0-5\GameData" /e /y /i /r
-del "$(SolutionDir)$(PlatformName)-Configs-Release.zip"
-del "$(SolutionDir)$(PlatformName)-EVE-Release.zip"
-7z a -tzip "$(SolutionDir)$(PlatformName)-Configs-Release.zip" "$(SolutionDir)ContentConfigs\GameData"
-7z a -tzip "$(SolutionDir)$(PlatformName)-EVE-Release.zip" "$(SolutionDir)ContentEVE\GameData"</PostBuildEvent>
+
+if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.pdb"
+if $(ConfigurationName) == Release del /s "$(SolutionDir)ContentEVE\*.mdb"
+if $(ConfigurationName) == Release del "$(SolutionDir)$(PlatformName)-Configs-Release.zip"
+if $(ConfigurationName) == Release del "$(SolutionDir)$(PlatformName)-EVE-Release.zip"
+if $(ConfigurationName) == Release 7z a -tzip "$(SolutionDir)$(PlatformName)-Configs-Release.zip" "$(SolutionDir)ContentConfigs\GameData"
+if $(ConfigurationName) == Release 7z a -tzip "$(SolutionDir)$(PlatformName)-EVE-Release.zip" "$(SolutionDir)ContentEVE\GameData"</PostBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
