Config that is no longer node-grouping oriented.
This involved little config module changes. Mostly GUI handling updates,
along with Config changes. Added a GUIHidden Attribute to hide items
from being exposed in the param list (used primarily for names and
bodies).
Also re-evaluated the ValueNode mechanism, and genericised it to use
Attributes to identify NodeValue params.

--- a/ContentConfigs/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/ContentConfigs/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -1,7 +1,8 @@
 EVE_CITY_LIGHTS
 {
-	Kerbin
+	OBJECT
 	{
+		body = Kerbin
 		cityLightsMaterial
 		{
 			_CityOverlayTex = BoulderCo/CityLights/Textures/main
