--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -8,9 +8,14 @@ EVE_CLOUDS
 		detailSpeed = 0,6,0
 		settings
 		{
-			_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 			_Color = 255,255,255,255
+			_MainTex
+			{
+				value = BoulderCo/Atmosphere/Textures/Clouds
+				type = AlphaCubeMap
+				alphaMask = ALPHAMAP_R
+			}
 		}
 		layer2D
 		{
@@ -429,105 +434,105 @@ EVE_CLOUDS
 				_InvFade = 0.008
 			}
 		}
-	OBJECT
-	{
-		name = Jool-clouds2
-		body = Jool
-		altitude = 45000
-		speed = 0,100,0
-		detailSpeed = 0,6,0
-		offset = 0,0,0
-		settings
+		OBJECT
 		{
-			_MainTex = BoulderCo/Atmosphere/Textures/joolLayers1
-			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
-			_DetailScale = 120
-			_DistFade = 1
-			_DistFadeVert = 4E-05
-			_Color = 26,43,16,255
-			_DetailDist = 2E-06
-		}
-		layer2D
-		{
-			shadowMaterial
+			name = Jool-clouds2
+			body = Jool
+			altitude = 45000
+			speed = 0,100,0
+			detailSpeed = 0,6,0
+			offset = 0,0,0
+			settings
 			{
-			}
-			macroCloudMaterial
-			{
-				_FalloffPow = 2
-				_FalloffScale = 3
+				_MainTex = BoulderCo/Atmosphere/Textures/joolLayers1
+				_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+				_DetailScale = 120
+				_DistFade = 1
+				_DistFadeVert = 4E-05
+				_Color = 26,43,16,255
 				_DetailDist = 2E-06
-				_MinLight = 0.5
-				_RimDist = 0.0001
-				_RimDistSub = 1.01
-				_InvFade = 0.008
+			}
+			layer2D
+			{
+				shadowMaterial
+				{
+				}
+				macroCloudMaterial
+				{
+					_FalloffPow = 2
+					_FalloffScale = 3
+					_DetailDist = 2E-06
+					_MinLight = 0.5
+					_RimDist = 0.0001
+					_RimDistSub = 1.01
+					_InvFade = 0.008
+				}
+			}
+			layerVolume
+			{
+				size = 4000,2
+				maxTranslation = 0,100,0
+				area = 24000,4
+				particleMaterial
+				{
+					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
+					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
+					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+					_LightScatter = 0.55
+					_MinLight = 0.5
+					_InvFade = 0.008
+				}
 			}
 		}
-		layerVolume
+		OBJECT
 		{
-			size = 4000,2
-			maxTranslation = 0,100,0
-			area = 24000,4
-			particleMaterial
+			name = Jool-clouds3
+			body = Jool
+			altitude = 45000
+			speed = 0,70,0
+			detailSpeed = 0,6,0
+			offset = 0,0,0
+			settings
 			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
-				_LightScatter = 0.55
-				_MinLight = 0.5
-				_InvFade = 0.008
+				_MainTex = BoulderCo/Atmosphere/Textures/joolLayers2
+				_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
+				_DetailScale = 120
+				_DistFade = 1
+				_DistFadeVert = 4E-05
+				_Color = 26,43,16,255
+				_DetailDist = 2E-06
+			}
+			layer2D
+			{
+				shadowMaterial
+				{
+				}
+				macroCloudMaterial
+				{
+					_FalloffPow = 2
+					_FalloffScale = 3
+					_DetailDist = 2E-06
+					_MinLight = 0.5
+					_RimDist = 0.0001
+					_RimDistSub = 1.01
+					_InvFade = 0.008
+				}
+			}
+			layerVolume
+			{
+				size = 4000,2
+				maxTranslation = 0,100,0
+				area = 24000,4
+				particleMaterial
+				{
+					_TopTex = BoulderCo/Atmosphere/Textures/particle/1
+					_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
+					_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
+					_LightScatter = 0.55
+					_MinLight = 0.5
+					_InvFade = 0.008
+				}
 			}
 		}
 	}
-	OBJECT
-	{
-		name = Jool-clouds3
-		body = Jool
-		altitude = 45000
-		speed = 0,70,0
-		detailSpeed = 0,6,0
-		offset = 0,0,0
-		settings
-		{
-			_MainTex = BoulderCo/Atmosphere/Textures/joolLayers2
-			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
-			_DetailScale = 120
-			_DistFade = 1
-			_DistFadeVert = 4E-05
-			_Color = 26,43,16,255
-			_DetailDist = 2E-06
-		}
-		layer2D
-		{
-			shadowMaterial
-			{
-			}
-			macroCloudMaterial
-			{
-				_FalloffPow = 2
-				_FalloffScale = 3
-				_DetailDist = 2E-06
-				_MinLight = 0.5
-				_RimDist = 0.0001
-				_RimDistSub = 1.01
-				_InvFade = 0.008
-			}
-		}
-		layerVolume
-		{
-			size = 4000,2
-			maxTranslation = 0,100,0
-			area = 24000,4
-			particleMaterial
-			{
-				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
-				_LeftTex = BoulderCo/Atmosphere/Textures/particle/2
-				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
-				_LightScatter = 0.55
-				_MinLight = 0.5
-				_InvFade = 0.008
-			}
-		}
-	}
-	
 }
