--- a/ContentConfigs/GameData/BoulderCo/textures.cfg
+++ b/ContentConfigs/GameData/BoulderCo/textures.cfg
@@ -2,6 +2,14 @@ TEXTURE_CONFIG
 {
 	OBJECT
 	{
-		name=BoulderCo/Atmosphere/Textures/duna1
+		name=BoulderCo/Atmosphere/Textures/Clouds
+		format=RGB24
+		isCubeMap=True
+		texXn=BoulderCo/Atmosphere/Textures/CloudsXn
+		texYn=BoulderCo/Atmosphere/Textures/CloudsYn
+		texZn=BoulderCo/Atmosphere/Textures/CloudsZn
+		texXp=BoulderCo/Atmosphere/Textures/CloudsXp
+		texYp=BoulderCo/Atmosphere/Textures/CloudsYp
+		texZp=BoulderCo/Atmosphere/Textures/CloudsZp
 	}
 }
