Fixed Cubemap Y textures

--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -29,8 +29,9 @@ EVE_CLOUDS
 		}
 		layerVolume
 		{
-			size = 4000,2
 			maxTranslation = 0,100,0
+			size = 2000,2
+			area = 26000,5
 			particleMaterial
 			{
 				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
