Tooltip fix, Texture updates

--- a/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
+++ b/ContentConfigs/GameData/BoulderCo/Atmosphere/clouds.cfg
@@ -12,9 +12,9 @@ EVE_CLOUDS
 			_Color = 255,255,255,255
 			_MainTex
 			{
-				value = BoulderCo/Atmosphere/Textures/Clouds
+				value = BoulderCo/Textures/cube
 				type = AlphaCubeMap
-				alphaMask = ALPHAMAP_R
+				alphaMask = ALPHAMAP_B
 			}
 		}
 		layer2D
@@ -47,18 +47,17 @@ EVE_CLOUDS
 		name = Laythe-clouds1
 		body = Laythe
 		altitude = 6000
-		speed = 0,30,0
 		detailSpeed = 0,6,0
-		offset = 0,0,0
 		settings
 		{
-			_MainTex = BoulderCo/Atmosphere/Textures/kerbin1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 			_DetailScale = 100
-			_DistFade = 1
-			_DistFadeVert = 4E-05
 			_Color = 102,102,153,255
-			_DetailDist = 2E-06
+			_MainTex
+			{
+				value = BoulderCo/Textures/cube
+				type = AlphaCubeMap
+			}
 		}
 		layer2D
 		{
@@ -67,20 +66,13 @@ EVE_CLOUDS
 			}
 			macroCloudMaterial
 			{
-				_FalloffPow = 2
-				_FalloffScale = 3
 				_DetailDist = 2E-06
-				_MinLight = 0.5
-				_RimDist = 0.0001
-				_RimDistSub = 1.01
-				_InvFade = 0.008
 			}
 		}
 		layerVolume
 		{
 			size = 4000,2
 			maxTranslation = 0,100,0
-			area = 24000,4
 			particleMaterial
 			{
 				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
@@ -88,7 +80,6 @@ EVE_CLOUDS
 				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 				_LightScatter = 0.55
 				_MinLight = 0.5
-				_InvFade = 0.008
 			}
 		}
 	}
@@ -97,18 +88,18 @@ EVE_CLOUDS
 		name = Duna-clouds1
 		body = Duna
 		altitude = 8000
-		speed = 0,30,0
 		detailSpeed = 0,6,0
-		offset = 0,0,0
 		settings
 		{
-			_MainTex = BoulderCo/Atmosphere/Textures/duna1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detail1
 			_DetailScale = 100
-			_DistFade = 1
-			_DistFadeVert = 4E-05
-			_Color = 97,41,25,255
-			_DetailDist = 2E-06
+			_Color = 150,150,150,255
+			_MainTex
+			{
+				value = BoulderCo/Textures/cube
+				type = AlphaCubeMap
+				alphaMask = ALPHAMAP_G
+			}
 		}
 		layer2D
 		{
@@ -117,20 +108,13 @@ EVE_CLOUDS
 			}
 			macroCloudMaterial
 			{
-				_FalloffPow = 2
-				_FalloffScale = 3
 				_DetailDist = 2E-06
-				_MinLight = 0.5
-				_RimDist = 0.0001
-				_RimDistSub = 1.01
-				_InvFade = 0.008
 			}
 		}
 		layerVolume
 		{
 			size = 4000,2
 			maxTranslation = 0,100,0
-			area = 24000,4
 			particleMaterial
 			{
 				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
@@ -138,7 +122,6 @@ EVE_CLOUDS
 				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 				_LightScatter = 0.55
 				_MinLight = 0.5
-				_InvFade = 0.008
 			}
 		}
 	}
@@ -393,16 +376,12 @@ EVE_CLOUDS
 		altitude = 45000
 		speed = 0,90,0
 		detailSpeed = 0,6,0
-		offset = 0,0,0
 		settings
 		{
 			_MainTex = BoulderCo/Atmosphere/Textures/jool1
 			_DetailTex = BoulderCo/Atmosphere/Textures/detaileve1
 			_DetailScale = 120
-			_DistFade = 1
-			_DistFadeVert = 4E-05
 			_Color = 26,43,16,255
-			_DetailDist = 2E-06
 		}
 		layer2D
 		{
@@ -411,20 +390,13 @@ EVE_CLOUDS
 			}
 			macroCloudMaterial
 			{
-				_FalloffPow = 2
-				_FalloffScale = 3
 				_DetailDist = 2E-06
-				_MinLight = 0.5
-				_RimDist = 0.0001
-				_RimDistSub = 1.01
-				_InvFade = 0.008
 			}
 		}
 		layerVolume
 		{
 			size = 4000,2
 			maxTranslation = 0,100,0
-			area = 24000,4
 			particleMaterial
 			{
 				_TopTex = BoulderCo/Atmosphere/Textures/particle/1
@@ -432,7 +404,6 @@ EVE_CLOUDS
 				_FrontTex = BoulderCo/Atmosphere/Textures/particle/3
 				_LightScatter = 0.55
 				_MinLight = 0.5
-				_InvFade = 0.008
 			}
 		}
 		OBJECT
