--- a/ContentConfigs/GameData/BoulderCo/CityLights/cityLights.cfg
+++ b/ContentConfigs/GameData/BoulderCo/CityLights/cityLights.cfg
@@ -5,7 +5,12 @@ EVE_CITY_LIGHTS
 		body = Kerbin
 		cityLightsMaterial
 		{
-			_CityOverlayTex = BoulderCo/CityLights/Textures/main
+			_CityOverlayTex
+			{
+				value = BoulderCo/Textures/cube
+				type = AlphaCubeMap
+				alphaMask = ALPHAMAP_R
+			}
 			_CityDarkOverlayDetailTex = BoulderCo/CityLights/Textures/detaildark
 			_CityLightOverlayDetailTex = BoulderCo/CityLights/Textures/detaillight
 		}
