--- a/ContentConfigs/GameData/BoulderCo/textures.cfg
+++ b/ContentConfigs/GameData/BoulderCo/textures.cfg
@@ -2,14 +2,14 @@ TEXTURE_CONFIG
 {
 	OBJECT
 	{
-		name=BoulderCo/Atmosphere/Textures/Clouds
-		format=RGB24
+		name=BoulderCo/Textures/cube
+		format=RGBA32
 		isCubeMap=True
-		texXn=BoulderCo/Atmosphere/Textures/CloudsXn
-		texYn=BoulderCo/Atmosphere/Textures/CloudsYn
-		texZn=BoulderCo/Atmosphere/Textures/CloudsZn
-		texXp=BoulderCo/Atmosphere/Textures/CloudsXp
-		texYp=BoulderCo/Atmosphere/Textures/CloudsYp
-		texZp=BoulderCo/Atmosphere/Textures/CloudsZp
+		texXn=BoulderCo/Textures/cubeXn
+		texYn=BoulderCo/Textures/cubeYn
+		texZn=BoulderCo/Textures/cubeZn
+		texXp=BoulderCo/Textures/cubeXp
+		texYp=BoulderCo/Textures/cubeYp
+		texZp=BoulderCo/Textures/cubeZp
 	}
 }
