UV fixes, refactoring, and working on a new module for realistic windows.

--- a/ShaderLoader/ShaderLoader.csproj
+++ b/ShaderLoader/ShaderLoader.csproj
@@ -90,7 +90,9 @@
       <Name>Utils</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Shaders\PartIVA.shader" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\CloudShadow.shader" />
     <None Include="Shaders\CloudVolumeParticle.shader" />
