--- a/RealWindows/RealWindows.csproj
+++ b/RealWindows/RealWindows.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{08C5F3E9-1567-4679-ACA2-360351B636BD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VisibleIVA</RootNamespace>
-    <AssemblyName>VisibleIVA</AssemblyName>
+    <RootNamespace>RealWindows</RootNamespace>
+    <AssemblyName>RealWindows</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -81,8 +81,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="VisibleIVAManager.cs" />
+    <Compile Include="RealWindows.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ShaderLoader\ShaderLoader.csproj">
+      <Project>{f210fbc0-0cbb-4cd2-a3f0-e32096cf256d}</Project>
+      <Name>ShaderLoader</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Utils\Utils.csproj">
+      <Project>{8b24314b-4b75-43f3-b31c-ffa9fc83fb70}</Project>
+      <Name>Utils</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
