--- a/PartFX/PartFX.csproj
+++ b/PartFX/PartFX.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{08C5F3E9-1567-4679-ACA2-360351B636BD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RealWindows</RootNamespace>
-    <AssemblyName>RealWindows</AssemblyName>
+    <RootNamespace>PartFX</RootNamespace>
+    <AssemblyName>PartFX</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -81,10 +81,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RealWindows.cs" />
+    <Compile Include="IVARenderCam.cs" />
+    <Compile Include="IVAWindowManager.cs" />
+    <Compile Include="IVAWindow.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\EveManager\EVEManager.csproj">
+      <Project>{499e8c5c-c83e-4aea-bb01-eed705bd747f}</Project>
+      <Name>EVEManager</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ShaderLoader\ShaderLoader.csproj">
       <Project>{f210fbc0-0cbb-4cd2-a3f0-e32096cf256d}</Project>
       <Name>ShaderLoader</Name>
